# trace-graph-store

./: .gitignore  Cargo.toml
base_storage/: Cargo.toml
base_storage/example_json/: example_jaeger_trace.json  example_personal.json  example_personal_string.json  nested_json.json
base_storage/src/: data_structure.rs  lib.rs
grpc_bridge/: Cargo.toml  build.rs
grpc_bridge/proto/: jaeger.proto
proto/: model.proto  timestamp.proto
src/: server.rs
