[package]
name = "base_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "*", features = ["json", "charset"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = "0.19.4"